Added some clarifying comments

--- a/templates/shiftEditor.html
+++ b/templates/shiftEditor.html
@@ -85,6 +85,9 @@
 
 				Would need a Jinja/Flask For Loop
 			-->
+		{% for emp in emp_names %}
+		<li>{{ emp }}</li>
+		{% endfor %}
 	</ul>
 
 	<button type="submit">Submit</button>
