Working on getting the employees in the session

--- a/templates/shiftEditor.html
+++ b/templates/shiftEditor.html
@@ -51,7 +51,7 @@
 			Would need a Jinja/Flask For Loop
 		-->
 	{% for emp in emps %}
-	<li>{{ emp.fname }} {{ emp.lname }}</li>
+	<li>{{ emp }}</li>
 	{% endfor %}
 </ul>
 {% endblock %}
