--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
 	</footer>
 
 	{% block scripts %}
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="/static/ajax.js"></script>
 	{% endblock %}
 </body>
 
