--- a/templates/shiftEditor.html
+++ b/templates/shiftEditor.html
@@ -11,12 +11,13 @@
 
 <form action="/switchShifts" method="POST" id="shiftSelection">
 	<label for="calendar">Select a date:</label>
-	<input type="date" id="calendar" name="calendar">
+	<input type="date" id="calendar" name="calendar" onchange="autoClick()" value="{{ selected_date|default('') }}">
 
 	<label for="selectedShift">Shift:</label>
-	<select id="selectedShift" name="selectedShift">
+	<select id="selectedShift" name="selectedShift" onchange="autoClick()">
 		{% for shift in shifts %}
-		<option value="{{ shift.id }}" id="shift{{ shift.id }}">{{ shift.display }}</option>
+		<option value="{{ shift.id }}" id="shift{{ shift.id }}" {% if selected_shift_id==shift.id %} selected {%endif%}>
+			{{ shift.display }}</option>
 		{% endfor %}
 	</select>
 	<ul id="dayShift" class="selectedEmployees">
@@ -24,7 +25,7 @@
 		<li>{{ employee_info.first }} {{ employee_info.last }}</li>
 		{% endfor %}
 	</ul>
-	<button type="submit">Submit</button>
+	<button type="submit" id="submitShift" display="none">Submit</button>
 </form><br>
 <form action="/makeAssignments" method="POST" id="shiftAssignment">
 	{% for station in stations %}
@@ -51,5 +52,11 @@
 {% endblock %}
 
 {% block scripts %}
-
+<script>
+	function autoClick() {
+		if (document.getElementById("calendar").value != "") {
+			document.getElementById("submitShift").click()
+		}
+	}
+</script>
 {% endblock %}
