trying to reset the session['assignments'] dictionary on shift switch

--- a/templates/shiftEditor.html
+++ b/templates/shiftEditor.html
@@ -38,6 +38,7 @@
 	</select>
 	<ul id="{{ station.station }}Employees" class="selectedEmployees">
 		<!-- Display the selected employees for each station -->
+		{{ assignments[station.station] }}
 	</ul>
 	{% endfor %}
 
