--- a/static/style.css
+++ b/static/style.css
@@ -62,18 +62,12 @@ h6 {
 }
 
 /* button class */
-/* < !-- HTML !--><button class="emp-button" role="button">Button 77</button>
-
-/* CSS */
-/* < !-- HTML !--><button class="emp-button" role="button">Button 78</button> */
-
-/* CSS */
-/* < !-- HTML !--><button class="button-80" role="button">Button 80</button> */
 
 /* CSS */
 .button-80 {
 	background: #fff;
 	backface-visibility: hidden;
+	border-color: #212121;
 	border-radius: .375rem;
 	border-style: solid;
 	border-width: .125rem;
@@ -134,56 +128,156 @@ h6 {
 
 /* Select Boxes */
 
-body {
-	background-color: #eee;
+/* .optionbox {
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+} */
+
+.select-box {
+	background: #fff;
+	border: 2px solid;
+	border-radius: .375rem;
+	box-sizing: border-box;
+	color: #212121;
+	cursor: pointer;
+	display: inline-block;
+	font-family: Circular, Helvetica, sans-serif;
+	font-size: 1.125rem;
+	font-weight: 700;
+	letter-spacing: -.01em;
+	line-height: 1.3;
+	padding: .875rem 1.125rem;
+	position: relative;
+	text-align: left;
+	text-decoration: none;
+	transition: transform .2s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	height: 55px;
+	width: 185px;
+	/* dropdown arrow */
+	/* background-image: url('dropdown-arrow.png');
+	background-repeat: no-repeat;
+	background-position: right center;
+	padding-right: 20px; */
 }
 
-.container {
-	height: 100vh;
+.select-box:hover {
+	transform: scale(1.05);
 }
 
-.dropdown-toggle {
-	width: 200px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 50px;
-	border: 2px solid #dc3545;
-	font-weight: 600;
+.select-box:active {
+	transform: scale(1.05) translateY(.125rem);
 }
 
-.dropdown-toggle:focus {
+.select-box:focus {
+	outline: 0 solid transparent;
+}
 
-	box-shadow: none !important;
+.select-box:focus:before {
+	content: "";
+	left: calc(-1 * .375rem);
+	pointer-events: none;
+	position: absolute;
+	top: calc(-1 * .375rem);
+	transition: border-radius;
+	user-select: none;
+}
 
+.select-box:focus:not(:focus-visible) {
+	outline: 0 solid transparent;
+}
+
+.select-box:focus:not(:focus-visible):before {
+	border-width: 0;
+}
+
+.select-box:disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
+}
+
+.select-box:disabled:hover {
+	transform: none;
+}
+
+.select-box:disabled:active {
+	transform: none;
 }
 
 
-.dropdown-toggle::after {
 
-	display: none;
 
+/* Calendar/Date Input */
+
+.calendar-input {
+	background: #fff;
+	border: 2px solid;
+	border-radius: .375rem;
+	box-sizing: border-box;
+	color: #212121;
+	cursor: pointer;
+	display: inline-block;
+	font-family: Circular, Helvetica, sans-serif;
+	font-size: 1.125rem;
+	font-weight: 700;
+	letter-spacing: -.01em;
+	line-height: 1.3;
+	padding: .875rem 1.125rem;
+	position: relative;
+	text-align: left;
+	text-decoration: none;
+	transition: transform .2s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	height: 55px;
+	width: 185px;
 }
 
-.dropdown-menu {
-
-	width: 200px;
-	border: 2px solid #F44336;
-	padding: 0rem 0;
-	transform: translate3d(0px, 50px, 0px) !important;
-
+.calendar-input:hover {
+	transform: scale(1.05);
 }
 
-.dropdown-item:focus,
-.dropdown-item:hover {
-	color: #ffffff;
-	background-color: #dc3545;
-	padding: 12px;
+.calendar-input:active {
+	transform: scale(1.05) translateY(.125rem);
 }
 
-.dropdown-item {
-	display: block;
-	width: 100%;
-	padding: 12px;
+.calendar-input:focus {
+	outline: 0 solid transparent;
+}
 
+.calendar-input:focus:before {
+	content: "";
+	left: calc(-1 * .375rem);
+	pointer-events: none;
+	position: absolute;
+	top: calc(-1 * .375rem);
+	transition: border-radius;
+	user-select: none;
+}
+
+.calendar-input:focus:not(:focus-visible) {
+	outline: 0 solid transparent;
+}
+
+.calendar-input:focus:not(:focus-visible):before {
+	border-width: 0;
+}
+
+.calendar-input:disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
+}
+
+.calendar-input:disabled:hover {
+	transform: none;
+}
+
+.calendar-input:disabled:active {
+	transform: none;
 }
