--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="bg"></div>
-	<div> TEST 1, 2</div>
+	<div> TEST 1, 2, 3</div>
 	<div class="bg bg2"></div>
 	<div class="bg bg3"></div>
 	<div class="content">
