--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,7 @@ h6 {
 	line-height: 1.3;
 	padding: .875rem 1.125rem;
 	position: relative;
-	text-align: left;
+	text-align: center;
 	text-decoration: none;
 	transform: translateZ(0) scale(1);
 	transition: transform .2s;
@@ -290,4 +290,14 @@ h6 {
 	padding-bottom: 10px;
 	padding-left: 0;
 	border-color: #68B0AB;
+}
+
+
+
+.employeeDisplayName {
+	font-size: medium;
+}
+
+.employeeDisplayTime {
+	font-size: x-small;
 }
