displaying start/end times

--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Shift Planner{% endblock %}
+{% block title %}GoodShift{% endblock %}
 
 {% block stylesheets %}
 <link rel="stylesheet" type="text/css" href="styles.css">
