--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 	<div class="bg"></div>
 	<div class="bg bg2"></div>
 	<div class="bg bg3"></div>
-	<div class="content">
+	<!-- <div class="content"> -->
 
 		<header>
 
@@ -32,7 +32,7 @@
 		<footer>
 
 		</footer>
-	</div>
+	<!-- </div> -->
 	{% block scripts %}
 	{% endblock %}
 </body>
